[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web 2.0 is supported through "actix2" and "actix2-nightly" features
# actix-web 3.0 is supported through "actix3" and "actix3-nightly" features
actix-web = "4"
# The "actix4-nightly" feature can be specified if you're using nightly compiler. Even though
# this plugin works smoothly with the nightly compiler, it also works in stable
# channel (replace "actix4-nightly" feature with "actix4" in that case). There maybe compilation errors,
# but those can be fixed.
# Add the "v3" option if you want to expose an OpenAPI v3 document
paperclip = { version = "0.7", features = ["actix4", "v3"] }
serde = { version = "1.0", features = ["derive"] }

